--- a/src/page/chat-magic/index.scss
+++ b/src/page/chat-magic/index.scss
@@ -98,7 +98,7 @@
     height: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     &-btn {
       display: flex;
       justify-content: center;
