--- a/src/page/chat-gpt/index.scss
+++ b/src/page/chat-gpt/index.scss
@@ -99,6 +99,14 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    &.msg::before {
+      content: 'Ctrl + Enter 换行';
+      position: absolute;
+      bottom: -20px;
+      right: 135px;
+      font-size: 12px;
+      color: #f2f5f7;
+    }
     &-btn {
       display: flex;
       justify-content: center;
@@ -129,35 +137,34 @@
         justify-content: space-between;
         align-items: center;
         background: #01c8d3;
-
         font-size: 28px;
         cursor: pointer;
         transition: transform 0.3s ease;
-        &:active {
+        &:active:not(.disabled) {
           transform: scale(0.9);
         }
+      }
+      .container-footer-sumbit.disabled {
+        background: #6a6a6a;
+        cursor: not-allowed;
       }
     }
   }
 }
-
 .chat-history-box {
   flex: 1 1 auto;
   overflow: auto;
   padding: 5px 300px;
   .chat-history {
     padding: 10px 22px;
-    &-gpt {
-      display: flex;
-      margin-bottom: 20px;
-    }
-    &-self {
-      display: flex;
-      // float: right;
+    margin-bottom: 20px;
+    display: flex;
+    // 发送
+    &.sent {
+      justify-content: right;
       flex-direction: row-reverse;
-
-      // justify-content: flex-end;
     }
+
     &-header {
       width: 35px;
       height: 35px;
@@ -176,13 +183,15 @@
       color: #737472;
     }
     &-content {
-      // display: inline-block;
       font-size: 14px;
       margin-top: 5px;
       background-color: #f2f5f7;
       color: #1e1e1e;
       padding: 5px 8px;
       border-radius: 5px;
+      display: flex;
+      align-items: center;
+      min-height: 34px;
     }
   }
 }
