--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -158,3 +158,80 @@
     transform: scale(0.9);
   }
 }
+
+// loading-rocks效果-实例
+// <div className="loading-rocks">
+//   <span className="rock"></span>
+//   <span className="rock"></span>
+//   <span className="rock"></span>
+// </div>
+.loading-rocks {
+  display: flex;
+  justify-content: center;
+  .rock {
+    width: 10px;
+    height: 10px;
+    margin: 0 5px;
+    border-radius: 50%;
+    background-color: #000;
+    animation: rock 1s ease-in-out infinite;
+    &:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+    &:nth-child(3) {
+      animation-delay: 0.4s;
+    }
+  }
+}
+@keyframes rock {
+  0% {
+    opacity: 0.2;
+    transform: scale(0.8);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1.2);
+  }
+  100% {
+    opacity: 0.2;
+    transform: scale(0.8);
+  }
+}
+// loading-jumps效果
+.loading-jumps {
+  display: flex;
+  justify-content: center;
+  .jump {
+    width: 7px;
+    height: 7px;
+    margin: 0 2px;
+    border-radius: 50%;
+    background-color: #1e1e1e;
+    animation: jump 1s ease-in-out infinite;
+    &:nth-child(2) {
+      animation-delay: 0.15s;
+    }
+    &:nth-child(3) {
+      animation-delay: 0.3s;
+    }
+  }
+}
+
+@keyframes jump {
+  20% {
+    transform: translateY(2%) scaleY(0.9);
+  }
+  40% {
+    transform: translateY(-100%) scaleY(1.2);
+  }
+  50% {
+    transform: translateY(10%) scaleY(0.8);
+  }
+  70% {
+    transform: translateY(-5%) scaleY(1);
+  }
+  80%,
+  100% {
+    transform: translateY(0) scaleY(1);
+  }
+}
