--- a/src/layouts/auth/index.scss
+++ b/src/layouts/auth/index.scss
@@ -12,14 +12,19 @@
 }
 
 .login-container {
+  position: relative;
+  overflow: hidden;
   width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: 'Montserrat', sans-serif;
-  box-shadow: inset 0 0 10px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
-    0 0 100px #03e9f4;
+  // box-shadow: inset 0 0 10px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4,
+  //   0 0 100px #03e9f4;
+  background: #212534;
+  // backdrop-filter: blur(6px);
+
   // PC登陆页面
   .login-form-bc {
     box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
@@ -38,87 +43,87 @@
       padding: 0px;
     }
     // 线条
-    .line {
-      position: absolute;
-      display: block;
-      @media screen and (max-width: 1000px) {
-        display: none;
-      }
-      &:nth-child(1) {
-        top: 0;
-        left: -100%;
-        width: 100%;
-        height: 2px;
-        background: linear-gradient(90deg, transparent, #03e9f4);
-        animation: btn-anim1 8s linear infinite;
-      }
-      @keyframes btn-anim1 {
-        0% {
-          left: -100%;
-        }
-        50%,
-        100% {
-          left: 100%;
-        }
-      }
-      &:nth-child(2) {
-        top: -100%;
-        right: 0;
-        width: 2px;
-        height: 100%;
-        background: linear-gradient(180deg, transparent, #03e9f4);
-        animation: btn-anim2 8s linear infinite;
-        animation-delay: 2s;
-      }
+    // .line {
+    //   position: absolute;
+    //   display: block;
+    //   @media screen and (max-width: 1000px) {
+    //     display: none;
+    //   }
+    //   &:nth-child(1) {
+    //     top: 0;
+    //     left: -100%;
+    //     width: 100%;
+    //     height: 2px;
+    //     background: linear-gradient(90deg, transparent, #03e9f4);
+    //     animation: btn-anim1 8s linear infinite;
+    //   }
+    //   @keyframes btn-anim1 {
+    //     0% {
+    //       left: -100%;
+    //     }
+    //     50%,
+    //     100% {
+    //       left: 100%;
+    //     }
+    //   }
+    //   &:nth-child(2) {
+    //     top: -100%;
+    //     right: 0;
+    //     width: 2px;
+    //     height: 100%;
+    //     background: linear-gradient(180deg, transparent, #03e9f4);
+    //     animation: btn-anim2 8s linear infinite;
+    //     animation-delay: 2s;
+    //   }
 
-      @keyframes btn-anim2 {
-        0% {
-          top: -100%;
-        }
-        50%,
-        100% {
-          top: 100%;
-        }
-      }
-      &:nth-child(3) {
-        bottom: 0;
-        right: -100%;
-        width: 100%;
-        height: 2px;
-        background: linear-gradient(270deg, transparent, #03e9f4);
-        animation: btn-anim3 8s linear infinite;
-        animation-delay: 4s;
-      }
+    //   @keyframes btn-anim2 {
+    //     0% {
+    //       top: -100%;
+    //     }
+    //     50%,
+    //     100% {
+    //       top: 100%;
+    //     }
+    //   }
+    //   &:nth-child(3) {
+    //     bottom: 0;
+    //     right: -100%;
+    //     width: 100%;
+    //     height: 2px;
+    //     background: linear-gradient(270deg, transparent, #03e9f4);
+    //     animation: btn-anim3 8s linear infinite;
+    //     animation-delay: 4s;
+    //   }
 
-      @keyframes btn-anim3 {
-        0% {
-          right: -100%;
-        }
-        50%,
-        100% {
-          right: 100%;
-        }
-      }
-      &:nth-child(4) {
-        bottom: -100%;
-        left: 0;
-        width: 2px;
-        height: 100%;
-        background: linear-gradient(360deg, transparent, #03e9f4);
-        animation: btn-anim4 8s linear infinite;
-        animation-delay: 6s;
-      }
+    //   @keyframes btn-anim3 {
+    //     0% {
+    //       right: -100%;
+    //     }
+    //     50%,
+    //     100% {
+    //       right: 100%;
+    //     }
+    //   }
+    //   &:nth-child(4) {
+    //     bottom: -100%;
+    //     left: 0;
+    //     width: 2px;
+    //     height: 100%;
+    //     background: linear-gradient(360deg, transparent, #03e9f4);
+    //     animation: btn-anim4 8s linear infinite;
+    //     animation-delay: 6s;
+    //   }
 
-      @keyframes btn-anim4 {
-        0% {
-          bottom: -100%;
-        }
-        50%,
-        100% {
-          bottom: 100%;
-        }
-      }
-    }
+    //   @keyframes btn-anim4 {
+    //     0% {
+    //       bottom: -100%;
+    //     }
+    //     50%,
+    //     100% {
+    //       bottom: 100%;
+    //     }
+    //   }
+    // }
     .login-form-left {
       > img {
         width: 500px;
@@ -169,5 +174,29 @@
     @media screen and (max-width: 768px) {
       width: 100%;
     }
+    .login-mrk-logo {
+      margin-right: 5px;
+    }
+  }
+  // 背景元素
+  .login-circle-right {
+    position: absolute;
+    right: -21%;
+    top: -37%;
+    width: 30vw;
+    height: 30vw;
+    border-radius: 50%;
+    border: 150px solid transparent;
+    border-color: #029de4;
+  }
+  .login-circle-bottom {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 10vw;
+    height: 10vw;
+    border-radius: 50%;
+    border: 50px solid transparent;
+    border-color: #029de4;
   }
 }
