--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -235,3 +235,127 @@
     transform: translateY(0) scaleY(1);
   }
 }
+
+// 浮动效果
+.float-up-down {
+  transform: translatey(0px);
+  animation: floatUD 3s ease-in-out infinite;
+  @keyframes floatUD {
+    0% {
+      transform: translatey(0px);
+    }
+    50% {
+      transform: translatey(-20px);
+    }
+    100% {
+      transform: translatey(0px);
+    }
+  }
+}
+.float-left-right {
+  transform: translatey(0px);
+  animation: floatLR 5s ease-in-out infinite;
+  @keyframes floatLR {
+    0% {
+      transform: translateX(0px);
+    }
+    50% {
+      transform: translateX(-30px);
+    }
+    100% {
+      transform: translateX(0px);
+    }
+  }
+}
+.float-left-top {
+  animation: floatLT 5s ease-in-out infinite;
+  @keyframes floatLT {
+    0% {
+      transform: translateY(30px);
+    }
+    50% {
+      transform: translateX(30px);
+    }
+    100% {
+      transform: translateY(30px);
+    }
+  }
+}
+
+// 旋转
+.rotated-infinite {
+  animation: rotated 2s infinite;
+  will-change: transform;
+  transform: perspective(300px) rotateX(0deg) rotateY(0deg);
+}
+@keyframes rotated {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+// 移动 旋转
+.rotate-move-infinite {
+  animation: rotate-move 5s linear infinite;
+}
+@keyframes rotate-move {
+  0% {
+    transform: translateY(-30px) rotateY(0);
+  }
+  50% {
+    transform: translateY(30px) rotateY(180deg);
+  }
+  100% {
+    transform: translateY(-30px) rotateY(360deg);
+  }
+}
+
+// 按钮经过
+.btn-hover {
+  color: #16182b;
+  position: relative;
+  z-index: 1;
+  transition: all 0.3s;
+  box-shadow: 0 8px 18px 0 rgba(131, 131, 131, 0.672);
+  &::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    border-radius: 100px;
+    background-color: #ffdfed;
+    transition: all 0.3s;
+  }
+  &::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    border-radius: 100px;
+    transition: all 0.3s;
+    border: 1px solid #ffdfed;
+    transform: scale(1.2, 1.2);
+  }
+  &:hover {
+    color: #fff;
+  }
+  &:hover::before {
+    opacity: 0;
+    transform: scale(0.5, 0.5);
+  }
+  &:hover::after {
+    opacity: 1;
+    transform: scale(1, 1);
+  }
+}
