登陆页面修改

--- a/src/components/circular-text/index.scss
+++ b/src/components/circular-text/index.scss
@@ -10,7 +10,5 @@
 .circular svg {
   display: block;
   overflow: visible;
-}
-svg {
-  transform: translate(0%, 0%) rotateX(-43deg) rotateY(-19deg) scale(1);
+  // transform: translate(0%, 0%) rotateX(-43deg) rotateY(-19deg) scale(1);
 }
