--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -15,6 +15,7 @@ $primary-300: #af40ff;
 $primary-400: #fd4a9e;
 $primary-500: #00ddeb;
 $primary-600: #94cdf8;
+$primary-700: #94cdf8;
 
 $accent-100: #f64d28; //强调颜色
 $accent-200: #006fff;
