--- a/src/components/BtnLogin/index.scss
+++ b/src/components/BtnLogin/index.scss
@@ -1,5 +1,5 @@
 @import '@/styles/theme';
-button {
+.login-btn {
   --arrow-width: 10px;
   --arrow-stroke: 2px;
   box-sizing: border-box;
@@ -13,43 +13,41 @@ button {
   align-items: center;
   gap: 0.6em;
   font-weight: bold;
-}
-button:hover {
-  background: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
-}
-button .arrow-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+  cursor: pointer;
 
-button .arrow {
-  margin-top: 1px;
-  width: var(--arrow-width);
-  background-color: transparent;
-  height: var(--arrow-stroke);
-  position: relative;
-  transition: 0.2s;
-}
-
-button .arrow::before {
-  content: '';
-  box-sizing: border-box;
-  position: absolute;
-  border: solid $bg-100;
-  border-width: 0 var(--arrow-stroke) var(--arrow-stroke) 0;
-  display: inline-block;
-  top: -3px;
-  right: 3px;
-  transition: 0.2s;
-  padding: 3px;
-  transform: rotate(-45deg);
-}
-
-button:hover .arrow {
-  background-color: $bg-100;
-}
-
-button:hover .arrow:before {
-  right: 0;
+  &:hover {
+    background: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+    .arrow-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .arrow {
+      background-color: $bg-100;
+    }
+    .arrow:before {
+      right: 0;
+    }
+  }
+  .arrow {
+    margin-top: 1px;
+    width: var(--arrow-width);
+    background-color: transparent;
+    height: var(--arrow-stroke);
+    position: relative;
+    transition: 0.2s;
+    &::before {
+      content: '';
+      box-sizing: border-box;
+      position: absolute;
+      border: solid $bg-100;
+      border-width: 0 var(--arrow-stroke) var(--arrow-stroke) 0;
+      display: inline-block;
+      top: -3px;
+      right: 3px;
+      transition: 0.2s;
+      padding: 3px;
+      transform: rotate(-45deg);
+    }
+  }
 }
