--- a/src/layouts/auth/index.scss
+++ b/src/layouts/auth/index.scss
@@ -97,9 +97,12 @@
             margin-left: 10px;
           }
         }
-        > :nth-child(2) {
-          font-size: 18px;
+        .ai-explain {
+          min-height: 3em;
+          font-size: 20px;
         }
+        // .ai-introduce {
+        // }
         .explain-btn {
           margin-top: 100px;
           cursor: pointer;
